--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,3 +11,9 @@
  *= require_self
  *= require_tree .
 */
+
+body{
+	line-height: 18px;
+	font-size: 12px;
+  	font-family: "Lucida Grande", Arial, Helvetica, Sans-serif;
+}
