--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,100 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="top-nav">
+		<div class="bd">
+			<div class="nav-items lfloat">
+				<a href="#">搭配社区</a>
+				<a href="#">欧美田园</a>
+				<a href="#">中国复古</a>
+			</div>
+			<div class="nav-items rfloat">
+				<a href="#">登陆</a>
+				<a href="#">注册</a>
+			</div>
+		</div>
+	</div>
+	<div id="wrapper">
+		<div id="header">
+			<div class="logo">&nbsp;</div>
+			<div class="channel">
+<div class="channel-col channel-col-f">
+					<div class="nowarp">
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+					
+					</div>
+				</div>
+		
+				<div class="channel-col">
+					<div class="nowarp">
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+					</div>
+				</div>
 
-<%= yield %>
+				<div class="channel-col">
+					<div class="nowarp">
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+	
+					</div>
+				</div>				
 
+				<div class="channel-col">
+					<div class="nowarp">
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+						<a href="#">上衣</a>
+	
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="container" class="clearfix">
+			<%= yield %>
+		</div>
+		<div id="footer">
+		</div>
+	</div>
 </body>
 </html>
